--- a/System/fly.fxml
+++ b/System/fly.fxml
@@ -6,21 +6,24 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #ffffff;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.SceneController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="768.0" prefWidth="1366.0" style="-fx-background-color: #ffffff;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.SceneController">
    <children>
-      <TableView layoutY="54.0" prefHeight="356.0" prefWidth="600.0">
+      <TableView layoutX="136.0" layoutY="131.0" prefHeight="596.0" prefWidth="1093.0">
         <columns>
-          <TableColumn prefWidth="128.79998779296875" style="-fx-background-color: #89cff0; -fx-border-color: #58b2dc;" text="Destination" />
-          <TableColumn prefWidth="104.0" style="-fx-background-color: #89cff0; -fx-border-color: #58b2dc;" text="Dato" />
-            <TableColumn prefWidth="72.800048828125" style="-fx-background-color: #89cff0; -fx-border-color: #58b2dc;" text="Tid" />
-            <TableColumn prefWidth="81.5999755859375" style="-fx-background-color: #89cff0; -fx-border-color: #58b2dc;" text="Flynr" />
-            <TableColumn prefWidth="111.20001220703125" style="-fx-background-color: #89cff0; -fx-border-color: #58b2dc;" text="Ledige pladser" />
-            <TableColumn prefWidth="99.20001220703125" style="-fx-background-color: #89cff0; -fx-border-color: #58b2dc;" />
+            <TableColumn fx:id="col_flynr" prefWidth="156.0000457763672" style="-fx-background-color: #89cff0; -fx-border-color: #58b2dc;" text="Flynr" />
+            <TableColumn fx:id="col_flynavn" prefWidth="396.8000183105469" style="-fx-background-color: #89cff0; -fx-border-color: #58b2dc;" text="Navn" />
+            <TableColumn fx:id="col_flypladser" prefWidth="256.79998779296875" style="-fx-background-color: #89cff0; -fx-border-color: #58b2dc;" text="Pladser" />
+            <TableColumn fx:id="col_flystatus" prefWidth="286.40008544921875" style="-fx-background-color: #89cff0; -fx-border-color: #58b2dc;" text="Status" />
         </columns>
       </TableView>
-      <Button layoutX="14.0" layoutY="8.0" mnemonicParsing="false" onAction="#switchToMenu" prefHeight="32.0" prefWidth="79.0" style="-fx-border-color: #58b2dc; -fx-background-color: #ffffff; -fx-border-radius: 4; -fx-border-width: 1.5;" text="Tilbage" textFill="#58b2dc">
+      <Button layoutX="27.0" layoutY="22.0" mnemonicParsing="false" onAction="#switchToMenu" prefHeight="51.0" prefWidth="157.0" style="-fx-border-color: #58b2dc; -fx-background-color: #ffffff; -fx-border-radius: 4; -fx-border-width: 1.5;" text="Tilbage" textFill="#58b2dc">
          <font>
-            <Font name="System Bold" size="12.0" />
+            <Font name="System Bold" size="22.0" />
          </font></Button>
+      <Button layoutX="1165.0" layoutY="22.0" mnemonicParsing="false" prefHeight="51.0" prefWidth="157.0" style="-fx-background-color: #89cff0; -fx-border-color: #58b2dc; -fx-border-radius: 3; -fx-border-width: 1.5;" text="Indlæs" textFill="WHITE">
+         <font>
+            <Font name="System Bold" size="22.0" />
+         </font>
+      </Button>
    </children>
 </AnchorPane>
