--- a/System/Rprodukter.fxml
+++ b/System/Rprodukter.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="768.0" prefWidth="1366.0" style="-fx-background-color: #ffffff;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1"  fx:controller="application.SceneController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="768.0" prefWidth="1366.0" style="-fx-background-color: #ffffff;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.SceneController">
    <children>
       <Button layoutX="14.0" layoutY="14.0" mnemonicParsing="false" onAction="#switchToMenu" prefHeight="58.0" prefWidth="152.0" style="-fx-background-color: #ffffff; -fx-border-color: #58b2dc; -fx-border-width: 1.5; -fx-border-radius: 3;" text="Tilbage" textFill="#58b2dc">
          <font>
@@ -20,7 +20,7 @@
          <font>
             <Font size="24.0" />
          </font></Text>
-      <Button layoutX="1180.0" layoutY="695.0" mnemonicParsing="false" prefHeight="51.0" prefWidth="157.0" style="-fx-background-color: #89cff0; -fx-border-color: #58b2dc; -fx-border-radius: 3; -fx-border-width: 1.5;" text="Tilføj" textFill="WHITE">
+      <Button layoutX="1157.0" layoutY="695.0" mnemonicParsing="false" prefHeight="51.0" prefWidth="157.0" style="-fx-background-color: #89cff0; -fx-border-color: #58b2dc; -fx-border-radius: 3; -fx-border-width: 1.5;" text="Tilføj" textFill="WHITE">
          <font>
             <Font name="System Bold" size="22.0" />
          </font>
@@ -77,12 +77,13 @@
             <Font size="1.0" />
          </font>
       </TextField>
-      <TableView layoutX="190.0" layoutY="93.0" prefHeight="242.0" prefWidth="1140.0" style="-fx-background-color: #ffffff; -fx-border-color: #58b2dc; -fx-border-width: 1.5;">
+      <TableView fx:id="table_TPTV" layoutX="190.0" layoutY="93.0" prefHeight="242.0" prefWidth="1140.0" style="-fx-background-color: #ffffff; -fx-border-color: #58b2dc; -fx-border-width: 1.5;">
         <columns>
-          <TableColumn prefWidth="1161.5999908447266" style="fx-border-color: #58b2dc; -fx-background-color: #58b2dc;" text="Tillægsprodukter" />
+          <TableColumn fx:id="col_TP" prefWidth="545.6000061035156" style="fx-border-color: #58b2dc; -fx-background-color: #58b2dc;" text="Tillægsprodukter" />
+            <TableColumn fx:id="col_pris" prefWidth="545.6000061035156" style="fx-border-color: #58b2dc; -fx-background-color: #58b2dc;" text="Pris" />
         </columns>
       </TableView>
-      <Button layoutX="1172.0" layoutY="14.0" mnemonicParsing="false" prefHeight="51.0" prefWidth="157.0" style="-fx-background-color: #89cff0; -fx-border-color: #58b2dc; -fx-border-radius: 3; -fx-border-width: 1.5;" text="Indlæs" textFill="WHITE">
+      <Button layoutX="1172.0" layoutY="14.0" mnemonicParsing="false" onAction="#loadTP" prefHeight="51.0" prefWidth="157.0" style="-fx-background-color: #89cff0; -fx-border-color: #58b2dc; -fx-border-radius: 3; -fx-border-width: 1.5;" text="Indlæs" textFill="WHITE">
          <font>
             <Font name="System Bold" size="22.0" />
          </font>
