--- a/System/fly.fxml
+++ b/System/fly.fxml
@@ -8,7 +8,7 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="768.0" prefWidth="1366.0" style="-fx-background-color: #ffffff;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.SceneController">
    <children>
-      <TableView fx:id="table_fly" layoutX="136.0" layoutY="131.0" prefHeight="596.0" prefWidth="1093.0">
+      <TableView fx:id="table_fly" layoutX="44.0" layoutY="114.0" prefHeight="596.0" prefWidth="1093.0">
         <columns>
             <TableColumn fx:id="col_flynr" prefWidth="156.0000457763672" style="-fx-background-color: #89cff0; -fx-border-color: #58b2dc;" text="Flynr" />
             <TableColumn fx:id="col_flynavn" prefWidth="396.8000183105469" style="-fx-background-color: #89cff0; -fx-border-color: #58b2dc;" text="Navn" />
@@ -21,6 +21,11 @@
             <Font name="System Bold" size="22.0" />
          </font></Button>
       <Button layoutX="1165.0" layoutY="22.0" mnemonicParsing="false" onAction="#loadFly" prefHeight="51.0" prefWidth="157.0" style="-fx-background-color: #89cff0; -fx-border-color: #58b2dc; -fx-border-radius: 3; -fx-border-width: 1.5;" text="Indlæs" textFill="WHITE">
+         <font>
+            <Font name="System Bold" size="22.0" />
+         </font>
+      </Button>
+      <Button layoutX="1175.0" layoutY="669.0" mnemonicParsing="false" onAction="#SwitchToProdukt" prefHeight="51.0" prefWidth="157.0" style="-fx-background-color: #89cff0; -fx-border-color: #58b2dc; -fx-border-radius: 3; -fx-border-width: 1.5;" text="Næste" textFill="WHITE">
          <font>
             <Font name="System Bold" size="22.0" />
          </font>
