--- a/System/menu.fxml
+++ b/System/menu.fxml
@@ -9,51 +9,56 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="768" prefWidth="1366.0" style="-fx-background-color: #89cff0;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.SceneController">
    <children>
-      <Button layoutX="222.0" layoutY="117.0" mnemonicParsing="false" onAction="#switchToFly" prefHeight="43.0" prefWidth="164.0" style="-fx-background-color: #ffffff; -fx-border-color: #0e4e6c; -fx-border-width: 2; -fx-border-radius: 4;" text="Bestil fly" textFill="#0e4e6c">
+      <Button layoutX="607.0" layoutY="168.0" mnemonicParsing="false" onAction="#switchToFly" prefHeight="43.0" prefWidth="164.0" style="-fx-background-color: #ffffff; -fx-border-color: #0e4e6c; -fx-border-width: 2; -fx-border-radius: 4;" text="Bestil fly" textFill="#0e4e6c">
          <font>
             <Font name="System Bold" size="12.0" />
          </font></Button>
-      <Text fill="WHITE" layoutX="252.0" layoutY="70.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Menu" underline="true">
+      <Text fill="WHITE" layoutX="604.0" layoutY="93.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Menu" underline="true">
          <font>
-            <Font name="Arial Bold" size="34.0" />
+            <Font name="Arial Bold" size="67.0" />
          </font>
       </Text>
       <ImageView fitHeight="148.0" fitWidth="156.0" layoutX="28.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../../../Downloads/fly.png" />
+            <Image url="@fly.png" />
          </image>
       </ImageView>
       <ImageView fitHeight="89.0" fitWidth="103.0" layoutX="378.0" layoutY="14.0" nodeOrientation="RIGHT_TO_LEFT" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../../../Downloads/sky.png" />
+            <Image url="@sky.png" />
          </image>
       </ImageView>
       <ImageView fitHeight="89.0" fitWidth="117.0" layoutX="102.0" layoutY="118.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../../../Downloads/sky.png" />
+            <Image url="@sky.png" />
          </image>
       </ImageView>
       <ImageView fitHeight="89.0" fitWidth="117.0" layoutX="484.0" layoutY="135.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../../../Downloads/sky.png" />
+            <Image url="@sky.png" />
          </image>
       </ImageView>
       <ImageView fitHeight="89.0" fitWidth="117.0" layoutX="178.0" layoutY="297.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../../../Downloads/sky.png" />
+            <Image url="@sky.png" />
          </image>
       </ImageView>
-      <ImageView fitHeight="148.0" fitWidth="156.0" layoutX="393.0" layoutY="238.0" nodeOrientation="RIGHT_TO_LEFT" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="ImagineView1" fitHeight="148.0" fitWidth="156.0" layoutX="393.0" layoutY="238.0" nodeOrientation="RIGHT_TO_LEFT" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../../../Downloads/fly.png" />
+            <Image url="@fly.png" />
          </image>
       </ImageView>
-      <Button layoutX="222.0" layoutY="185.0" mnemonicParsing="false" onAction="#switchToBilletter" prefHeight="43.0" prefWidth="164.0" style="-fx-background-color: #ffffff; -fx-border-color: #0e4e6c; -fx-border-width: 2; -fx-border-radius: 4;" text="Billetter" textFill="#0e4e6c">
+      <Button layoutX="608.0" layoutY="250.0" mnemonicParsing="false" onAction="#switchToBilletter" prefHeight="43.0" prefWidth="164.0" style="-fx-background-color: #ffffff; -fx-border-color: #0e4e6c; -fx-border-width: 2; -fx-border-radius: 4;" text="Billetter" textFill="#0e4e6c">
          <font>
             <Font name="System Bold" size="12.0" />
          </font>
       </Button>
-      <Button layoutX="222.0" layoutY="253.0" mnemonicParsing="false" onAction="#switchToRprodukter" prefHeight="43.0" prefWidth="164.0" style="-fx-background-color: #ffffff; -fx-border-color: #0e4e6c; -fx-border-width: 2; -fx-border-radius: 4;" text="Rediger tillægsprodukter" textFill="#0e4e6c">
+      <Button layoutX="607.0" layoutY="331.0" mnemonicParsing="false" onAction="#switchToRprodukter" prefHeight="43.0" prefWidth="164.0" style="-fx-background-color: #ffffff; -fx-border-color: #0e4e6c; -fx-border-width: 2; -fx-border-radius: 4;" text="Rediger tillægsprodukter" textFill="#0e4e6c">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font>
+      </Button>
+      <Button layoutX="608.0" layoutY="415.0" mnemonicParsing="false" onAction="#SwitchToTur" prefHeight="43.0" prefWidth="164.0" style="-fx-background-color: #ffffff; -fx-border-color: #0e4e6c; -fx-border-width: 2; -fx-border-radius: 4;" text="Tur/Retur" textFill="#0e4e6c">
          <font>
             <Font name="System Bold" size="12.0" />
          </font>
