--- a/System/fly.fxml
+++ b/System/fly.fxml
@@ -24,7 +24,7 @@
             <Font name="System Bold" size="22.0" />
          </font>
       </Button>
-      <Button layoutX="1175.0" layoutY="669.0" mnemonicParsing="false" onAction="#SwitchToProdukt" prefHeight="51.0" prefWidth="157.0" style="-fx-background-color: #89cff0; -fx-border-color: #58b2dc; -fx-border-radius: 3; -fx-border-width: 1.5;" text="Næste" textFill="WHITE">
+      <Button layoutX="1175.0" layoutY="669.0" mnemonicParsing="false" onAction="#switchToNyBillet" prefHeight="51.0" prefWidth="157.0" style="-fx-background-color: #89cff0; -fx-border-color: #58b2dc; -fx-border-radius: 3; -fx-border-width: 1.5;" text="Næste" textFill="WHITE">
          <font>
             <Font name="System Bold" size="22.0" />
          </font>
