--- a/System/nybillet.fxml
+++ b/System/nybillet.fxml
@@ -1,9 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.CheckBox?>
-<?import javafx.scene.control.MenuButton?>
-<?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
@@ -11,51 +8,25 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #ffffff;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.SceneController">
    <children>
-      <SplitPane dividerPositions="0.12011718750000001" layoutX="-12.0" layoutY="-4.0" orientation="VERTICAL" prefHeight="411.0" prefWidth="619.0">
-        <items>
-          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0" style="-fx-background-color: #ffffff;" />
-          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0" style="-fx-background-color: #ffffff;">
-               <children>
-                  <Text layoutX="33.0" layoutY="33.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Navn:" />
-                  <Text layoutX="33.0" layoutY="66.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Tlfnr:" />
-                  <Text layoutX="32.0" layoutY="104.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Email" />
-                  <TextField layoutX="77.0" layoutY="16.0" />
-                  <TextField layoutX="77.0" layoutY="49.0" />
-                  <TextField layoutX="77.0" layoutY="87.0" />
-                  <MenuButton layoutX="152.0" layoutY="140.0" mnemonicParsing="false" style="-fx-background-color: #ffffff; -fx-border-color: #58b2dc; -fx-border-radius: 3; -fx-border-width: 1.5;" text="Drikkevarer" textFill="#58b2dc">
-                     <font>
-                        <Font name="System Bold" size="12.0" />
-                     </font></MenuButton>
-                  <Text layoutX="467.0" layoutY="33.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Evt CVR:" />
-                  <CheckBox layoutX="522.0" layoutY="20.0" mnemonicParsing="false" style="-fx-background-color: #ffffff;" text="Ja" />
-                  <TextField editable="false" layoutX="456.0" layoutY="49.0" promptText="CVR" />
-                  <CheckBox layoutX="450.0" layoutY="104.0" mnemonicParsing="false" text="Fotografi" />
-                  <CheckBox layoutX="450.0" layoutY="154.0" mnemonicParsing="false" text="Speciel bagagehåndtering" />
-                  <Button layoutX="515.0" layoutY="319.0" mnemonicParsing="false" onAction="#switchToMenu" prefHeight="27.0" prefWidth="90.0" style="-fx-background-color: #89cff0; -fx-border-color: #58b2dc; -fx-border-radius: 3; -fx-border-width: 1.5;" text="Udfør" textFill="WHITE">
-                     <font>
-                        <Font name="System Bold" size="12.0" />
-                     </font></Button>
-                  <Text layoutX="515.0" layoutY="254.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Ex moms:" wrappingWidth="70.39999999999986" />
-                  <Text layoutX="517.0" layoutY="281.0" strokeType="OUTSIDE" strokeWidth="0.0" text="0" wrappingWidth="32.799999999999955" />
-                  <MenuButton layoutX="46.0" layoutY="140.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="90.0" style="-fx-background-color: #ffffff; -fx-border-color: #58b2dc; -fx-border-radius: 3; -fx-border-width: 1.5;" text="Mad" textFill="#58b2dc">
-                     <font>
-                        <Font name="System Bold" size="12.0" />
-                     </font>
-                  </MenuButton>
-                  <MenuButton layoutX="264.0" layoutY="140.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="90.0" style="-fx-background-color: #ffffff; -fx-border-color: #58b2dc; -fx-border-radius: 3; -fx-border-width: 1.5;" text="Desserter" textFill="#58b2dc">
-                     <font>
-                        <Font name="System Bold" size="12.0" />
-                     </font>
-                  </MenuButton>
-                  <Button layoutX="32.0" layoutY="319.0" mnemonicParsing="false" onAction="#switchToFly" prefHeight="27.0" prefWidth="90.0" style="-fx-background-color: #ffffff; -fx-border-color: #58b2dc; -fx-border-radius: 3; -fx-border-width: 1.5;" text="Fortryd" textFill="#58b2dc">
-                     <font>
-                        <Font name="System Bold" size="12.0" />
-                     </font>
-                  </Button>
-               </children>
-            </AnchorPane>
-        </items>
-      </SplitPane>
-      <Text layoutX="14.0" layoutY="27.0" strokeType="OUTSIDE" strokeWidth="0.0" text="desti" wrappingWidth="72.80001831054688" />
+      <Text layoutX="352.0" layoutY="106.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Evt CVR (undlad at skrive hvis intet CVR):" />
+      <Button layoutX="492.0" layoutY="340.0" mnemonicParsing="false" onAction="#switchToProdukter" prefHeight="27.0" prefWidth="90.0" style="-fx-background-color: #89cff0; -fx-border-color: #58b2dc; -fx-border-radius: 3; -fx-border-width: 1.5;" text="Udfør" textFill="WHITE">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font>
+      </Button>
+      <Text layoutX="474.0" layoutY="319.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Ex moms:" wrappingWidth="70.39999999999986" />
+      <Button layoutX="21.0" layoutY="342.0" mnemonicParsing="false" onAction="#switchToFly" prefHeight="27.0" prefWidth="90.0" style="-fx-background-color: #ffffff; -fx-border-color: #58b2dc; -fx-border-radius: 3; -fx-border-width: 1.5;" text="Fortryd" textFill="#58b2dc">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font>
+      </Button>
+      <Text layoutX="552.0" layoutY="319.0" strokeType="OUTSIDE" strokeWidth="0.0" text="0" wrappingWidth="32.799999999999955" />
+      <Text layoutX="52.0" layoutY="128.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Navn:" wrappingWidth="32.799999999999955" />
+      <Text layoutX="52.0" layoutY="167.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Tlfnr:" wrappingWidth="28.32421875" />
+      <Text layoutX="52.0" layoutY="204.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Email:" wrappingWidth="32.799999999999955" />
+      <TextField fx:id="inputNavn" layoutX="90.0" layoutY="111.0" />
+      <TextField fx:id="inputTlf" layoutX="90.0" layoutY="150.0" />
+      <TextField fx:id="inputEmail" layoutX="90.0" layoutY="187.0" />
+      <TextField fx:id="inputCVR" layoutX="352.0" layoutY="110.0" promptText="CVR" />
    </children>
 </AnchorPane>
